--- a/style.css
+++ b/style.css
@@ -65,11 +65,23 @@ body {
   width: 100%;
   background-color: #05091c;
 }
+input[type="range"] {
+  -webkit-appearance: none;
+  appearance: none;
+}
+::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+}
+img {
+  width: 100%;
+  height: auto;
+}
 .section {
-  width: 140rem;
+  max-width: 140rem;
   height: 85.6rem;
   border-radius: 4rem;
-  background-color: rgba(196, 196, 196, 0.01);
+  background: rgba(196, 196, 196, 0.01);
   box-shadow: inset 0px 50.8326px 72.9904px -46.9224px rgba(255, 255, 255, 0.5),
     inset 0px 9.1238px 14.3374px -5.2136px #ffffff,
     inset 0px -106.879px 88.6312px -83.4176px rgba(96, 68, 145, 0.3),
@@ -89,27 +101,33 @@ body {
   justify-content: space-between;
   padding: 1.6rem 3.2rem;
 }
-.right {
+.left {
   display: flex;
   flex-direction: row;
   align-items: center;
 }
-.right .header-title {
+.left .header-title {
   font-size: 2.4rem;
   line-height: 2.6rem;
   font-family: "MY TURTLE";
   padding-left: 1.4rem;
   color: #8798cc;
 }
-.left {
+.icon-dashboard {
+  width: 4rem;
+  height: 4rem;
+}
+.right {
   width: 50%;
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
   align-items: center;
 }
-.left img {
+.right img {
+  width: 4.2rem;
   margin-left: 2.4rem;
+  height: 4.2rem;
 }
 .perioud {
   margin-right: 5rem;
@@ -118,6 +136,8 @@ body {
   font-weight: 500;
   font-family: "Popins";
   color: rgba(255, 255, 255, 0.7);
+  border-right: 1px solid rgba(162, 152, 162, 0.09);
+  padding-right: 4rem;
 }
 .content {
   display: grid;
@@ -131,6 +151,7 @@ body {
   height: 100%;
   box-shadow: 0px 0px 40px #0a163d;
   border-radius: 3rem;
+  /* overflow: hidden; */
 }
 .profile {
   width: 32rem;
@@ -172,6 +193,10 @@ body {
 .running-task {
   grid-row: 2/6;
   grid-column: 3/5;
+  background-color: #172a61;
+  padding: 2.4rem 2rem;
+  height: 58rem;
+  overflow: hidden;
 }
 
 .avatar-profile {
@@ -217,7 +242,7 @@ body {
   align-items: center;
 }
 .dropdown-profile span::before {
-  content: url(./assets/Stroke\ 1.png);
+  content: "url(./assets/Stroke\ 1.png)";
 }
 .box-social {
   display: grid;
@@ -227,6 +252,7 @@ body {
   border-radius: 2.2rem;
   margin-right: 1.8rem;
   height: 8rem;
+  width: 23rem;
 }
 .box-social:last-child {
   margin-right: 0;
@@ -343,4 +369,148 @@ body {
   font-size: 1.2rem;
   line-height: 1.2rem;
   font-family: "Yaldevi Colombo";
+}
+.head-task {
+  display: grid;
+  grid-template: 1fr / 1fr 1fr;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+.tasks {
+  display: grid;
+  grid-template: repeat(3, 1fr) / 1fr;
+  row-gap: 3rem;
+}
+/* !Task */
+.task {
+  width: 100%;
+  height: 100%;
+  background-color: #25376c;
+  border-radius: 2.2rem;
+  display: grid;
+  grid-template: repeat(3, 1fr) / repeat(6, 1fr);
+  padding: 1.2rem 2rem;
+}
+.title-status {
+  grid-row: 1/2;
+  grid-column: 1/4;
+  display: grid;
+  grid-template: 1fr / repeat(3, 1fr);
+  align-items: center;
+}
+.icon {
+  width: 5rem;
+  height: 5rem;
+  background-color: #172a61;
+  border-radius: 0.7rem;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+}
+.title-status p {
+  grid-column: 2/4;
+  font-size: 1.4rem;
+  line-height: 1.8rem;
+  color: #fff;
+  font-family: "Mula";
+  font-weight: 400;
+}
+.status {
+  grid-row: 1/2;
+  grid-column: 4/7;
+  justify-content: end;
+  display: grid;
+  grid-template: 1fr / repeat(6, 1fr);
+  align-items: center;
+  text-align: right;
+}
+.text {
+  grid-column: 3/5;
+  font-size: 1.2rem;
+  line-height: 1.7rem;
+  color: #8896ca;
+  font-family: "Mula";
+  font-weight: 400;
+}
+.number-percent {
+  grid-column: 5/6;
+  font-size: 1.4rem;
+  line-height: 1.4rem;
+  color: #fff;
+  font-family: "Mula";
+  font-weight: 700;
+}
+.more {
+  grid-column: 6/7;
+  font-size: 1.4rem;
+  line-height: 1.4rem;
+  color: #fff;
+  font-family: "Mula";
+  font-weight: 700;
+}
+.range-status {
+  grid-row: 2/3;
+  grid-column: 1/7;
+  padding: 2rem 0;
+}
+
+.range-staus-input {
+  background: linear-gradient(90deg, #fdd8d0 0%, #fa927b 100%);
+  cursor: pointer;
+  width: 74%;
+  height: 2px;
+}
+.chat {
+  width: 14%;
+  background: linear-gradient(90deg, rgba(58, 159, 253, 0.43) 0%, #3a9ffd 100%);
+}
+.heart {
+  width: 100%;
+  background: linear-gradient(
+    90deg,
+    rgba(232, 118, 230, 0.24) 0%,
+    #e876e6 100%
+  );
+}
+.completed {
+  grid-column: 5/6;
+
+  color: #de73df;
+}
+
+.company-name {
+  grid-row: 3/4;
+  grid-column: 1/3;
+}
+.folowers {
+  grid-row: 3/4;
+  grid-column: 3/4;
+}
+.number-sales {
+  grid-row: 3/4;
+  grid-column: 4/5;
+}
+.erned {
+  grid-row: 3/4;
+  grid-column: 5/6;
+}
+.start-data {
+  grid-row: 3/4;
+  grid-column: 6/7;
+}
+.title-prop {
+  font-size: 1rem;
+  line-height: 1.4rem;
+  color: #8896ca;
+  font-family: "Mula";
+  font-weight: 400;
+  margin-bottom: 1rem;
+}
+
+.value-prop {
+  font-size: 1.4rem;
+  line-height: 1.8rem;
+  color: #fff;
+  font-family: "Poor Story";
 }
